force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/SVMXA360__EntitledServicePlan__c.object-meta.xml
<CustomObject>
    <description>Stores the plans/templates to author Entitled Services.</description>
    <label>Entitled Service Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Entitled Service Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitled Service Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>