force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__CaseEntitlementProcess__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CaseEntitlementProcess__c</fullName>
    <description>A Lookup to the Case Entitlement Process for this Entitled Service Plan</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Entitlement Process</label>
    <length>20</length>
    <type>Text</type>
</CustomField>