force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__ContractLineItemPlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractLineItemPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup relationship to Applicable Contract Line Product.</description>
    <label>Applicable Contract Line Product</label>
    <referenceTo>SVMXA360__ContractLineItemPlan__c</referenceTo>
    <relationshipLabel>Entitled Service Plans</relationshipLabel>
    <relationshipName>Entitled_Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>