force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__EntitledServiceDuration__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServiceDuration__c</fullName>
    <description>The duration of the plan, in numbers.</description>
    <label>Entitled Service Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>