force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__EntitledServicePlanLevel__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServicePlanLevel__c</fullName>
    <description>Indicates whether the Entitled Service plan belongs to Applicable Contract Line Product or Service Contract plan.</description>
    <formula>IF(ISBLANK(SVMXA360__ContractLineItemPlanId__c), $Label.svmxa360__Label_ServiceContractPlan, $Label.svmxa360__Label_ContractLineItemPlan)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitled Service Plan Level</label>
    <type>Text</type>
</CustomField>