force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__EntitledServiceProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServiceProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product that is to be used to author Entitled Service.</description>
    <label>Entitled Service Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entitled Service Plans</relationshipLabel>
    <relationshipName>Entitled_Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>