force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperatingHoursId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The operating hours for the service.</description>
    <label>Operating Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Entitled Service Plans</relationshipLabel>
    <relationshipName>Entitled_Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>