force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__ServiceAmountThreshold__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceAmountThreshold__c</fullName>
    <description>The duration of the service threshold, in amount.</description>
    <label>Service Amount Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>