force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__ServiceContractPlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup relationship to the Contract Plan.</description>
    <label>Service Contract Plan</label>
    <referenceTo>SVMXA360__ServiceContractPlan__c</referenceTo>
    <relationshipLabel>Entitled Service Plans</relationshipLabel>
    <relationshipName>Entitled_Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>