force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__ServiceCountThreshold__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceCountThreshold__c</fullName>
    <description>The count of the service threshold.</description>
    <label>Service Count Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>