force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__ServiceUnit__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceUnit__c</fullName>
    <description>The unit/type of services to be made available.</description>
    <label>Service Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visits</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>