force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__TotalServiceCount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalServiceCount__c</fullName>
    <description>The number of services to be made available.</description>
    <label>Total Service Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>