force-app/main/default/objects/SVMXA360__EntitledServicePlan__c/fields/SVMXA360__WorkOrderEntitlementProcess__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderEntitlementProcess__c</fullName>
    <description>A Lookup to the Work Order Entitlement Process for this Entitled Service Plan</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Order Entitlement Process</label>
    <length>20</length>
    <type>Text</type>
</CustomField>